--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "private": true,
   "scripts": {},
   "license": "MIT",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^16.11.9",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
+  },
   "dependencies": {}
 }
