--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.11.9",
-    "prisma": "^3.5.0",
+    "prisma": "3.5.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@prisma/client": "3.5.0"
+  }
 }
